Agregado navegación y contenido

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi restaurante</title>
 </head>
 <body>
-    <!-- Tu contenido va aquí -->
+    <h1>Mi restaurante de especialidades tirolesas</h1>
 </body>
 </html>
 ```
@@ -26,8 +26,8 @@
 <nav>
     <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="sobre-mi.html">Sobre Mí</a></li>
-        <li><a href="proyectos.html">Proyectos</a></li>
+        <li><a href="menu.html">Sobre Mí</a></li>
+        <li><a href="galeria.html">Proyectos</a></li>
         <li><a href="contacto.html">Contacto</a></li>
     </ul>
 </nav>
