Imagen en etiqueta img

--- a/index.html
+++ b/index.html
@@ -9,39 +9,33 @@
     <h1>Mi restaurante de especialidades tirolesas</h1>
 </body>
 </html>
-```
 
-### Etiquetas Esenciales
 
-#### Títulos y Párrafos
-```html
-<h1>Título Principal</h1>
-<h2>Subtítulo</h2>
-<h3>Título de Sección</h3>
-<p>Este es un párrafo de texto normal.</p>
-```
 
-#### Navegación
-```html
+<h1>Herr Fritz</h1>
+<h2>Sabores de los Alpes</h2>
+<h3>Somos tradicion</h3>
+<p>Adler Tiroler Adler</p>
+
+
+
 <nav>
     <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="menu.html">Sobre Mí</a></li>
-        <li><a href="galeria.html">Proyectos</a></li>
+        <li><a href="menu.html">Nuestro menu</a></li>
+        <li><a href="galeria.html">Galeria</a></li>
         <li><a href="contacto.html">Contacto</a></li>
     </ul>
 </nav>
-```
 
-#### Imágenes
-```html
-<img src="images/mi-foto.jpg" alt="Descripción de la imagen">
-```
 
-#### Listas
-```html
+
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgASkrTBtOYYDzVxLSMALUo22sShyphenhyphenm2onkV6bp3Y29OV3T1fHUSCyzMNVwRH3vby9mzGh2Qn_sBD4ocFLJyq1zwnuI-JfRYtUDFFaOAAAMyz_IyEiZnGZFAvCKvHbEOxwoqtIfFbotSWVc/s1600/buenos-di%25CC%2581as-Roma---La-Cantina-Tirolese-knodel.jpg" alt="Descripción de la imagen">
+
+
+
 <ul>
-    <li>Primer elemento</li>
-    <li>Segundo elemento</li>
-    <li>Tercer elemento</li>
+    <li>Entradas</li>
+    <li>Principales</li>
+    <li>Postres</li>
 </ul>
