añadidas funcionalidades de navegacion

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi restaurante</title>
+    <title>Restaurante Herr Fritz</title>
 </head>
 <body>
     <h1>Mi restaurante de especialidades tirolesas</h1>
@@ -11,8 +11,6 @@
 </html>
 
 
-
-<h1>Herr Fritz</h1>
 <h2>Sabores de los Alpes</h2>
 <h3>Somos tradicion</h3>
 <p>Adler Tiroler Adler</p>
@@ -22,15 +20,12 @@
 <nav>
     <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="menu.html">Nuestro menu</a></li>
+        <li><a href="menu.html">Menu</a></li>
         <li><a href="galeria.html">Galeria</a></li>
         <li><a href="contacto.html">Contacto</a></li>
     </ul>
 </nav>
 
-
-
-<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgASkrTBtOYYDzVxLSMALUo22sShyphenhyphenm2onkV6bp3Y29OV3T1fHUSCyzMNVwRH3vby9mzGh2Qn_sBD4ocFLJyq1zwnuI-JfRYtUDFFaOAAAMyz_IyEiZnGZFAvCKvHbEOxwoqtIfFbotSWVc/s1600/buenos-di%25CC%2581as-Roma---La-Cantina-Tirolese-knodel.jpg" alt="Descripción de la imagen">
 
 
 
