--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bienvenidos Restaurante Herr Fritz!</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Germania+One&family=Grandstander:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
+    <header class="header">
+      <nav class="header__nav">
+        <ul class="nav__list">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="menu.html">Menu</a></li>
           <li><a href="galeria.html">Galeria</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
+    
     </header>
     <div>
       <h1>Herr Fritz</h1>
@@ -69,7 +76,6 @@
     </footer>
 
     <script>
-      
       document.getElementById("year").textContent = new Date().getFullYear();
     </script>
   </body>
