--- a/menu.html
+++ b/menu.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menú</title>
+    <title>Bienvenidos Restaurante Herr Fritz!</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Germania+One&family=Grandstander:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
    
+    <header class="header">
+      <div class="header__logo">
+        <img src="images/tirol-logo.png" alt="Logo restaurante Herr Fritz" />
+      </div>
 
-    <header>
-      <nav>
-        <ul>
+      <nav class="header__nav">
+        <ul class="nav__list">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="menu.html">Nuestro menu</a></li>
+          <li><a href="menu.html">Menu</a></li>
           <li><a href="galeria.html">Galeria</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
