añadido navegacion responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images/tirol-logo.png" alt="Logo restaurante Herr Fritz" />
       </div>
 
-      <nav class="header__nav">
+      <nav>
         <ul class="nav__list">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="menu.html">Menu</a></li>
@@ -28,7 +28,8 @@
       </nav>
     </header>
 
-    <div>
+    <div class="content">
+      <h1>Restaurante Herr Fritz</h1>
       <h3>Te ofrecemos los mejores servicios</h3>
       <ul>
         <li>Terraza o área exterior (en climas adecuados)</li>
