--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <!-- Tu CSS personalizado -->
+    <!-- CSS personalizado -->
     <link rel="stylesheet" href="css/styles.css" />
 
     <!-- Google Fonts -->
@@ -148,7 +148,7 @@
       </div>
     </footer>
 
-    <!-- Bootstrap JS Bundle with Popper -->
+    <!-- Mi link de Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
