añadido carrusel en menu, uniformizacion de las fuente en las paginas

--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
       </nav>
     </header>
 
-    <!-- Menú Carrousel-->
+    <!-- Menú de mi Carrousel-->
     <main>
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
@@ -125,7 +125,6 @@
     </main>
 
    
-
     <footer
       style="
         background-color: #f5f5f5;
