--- a/menu.html
+++ b/menu.html
@@ -42,6 +42,10 @@
     </header>
 
     <!-- Menú de mi Carrousel-->
+<div class="menu-title"><h1>Nuestro  menú</h1></div>
+
+    <div class="menu-subtitle"><h3>Conoce nuestra carta</h3></div>
+
     <main>
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
@@ -68,11 +72,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              src="images/img5.jpg"
-              class="d-block w-100"
-              alt="Entradas"
-            />
+            <img src="images/img5.jpg" class="d-block w-100" alt="Entradas" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Vorspeisen</h5>
               <p>Disfruta de nuestras entradas y entremeses</p>
@@ -86,17 +86,11 @@
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Hauptgerichte</h5>
-              <p>
-                Deleite tu paladar con nuestros insignes platos fuertes
-              </p>
+              <p>Deleite tu paladar con nuestros insignes platos fuertes</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              src="images/img6.jpg"
-              class="d-block w-100"
-              alt="Postres"
-            />
+            <img src="images/img6.jpg" class="d-block w-100" alt="Postres" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Nachtisch</h5>
               <p>Endulza tu paladar con nuestra selecciones de postres</p>
@@ -124,26 +118,39 @@
       </div>
     </main>
 
-   
-    <footer
-      style="
-        background-color: #f5f5f5;
-        padding: 20px;
-        text-align: center;
-        font-family: Arial, sans-serif;
-        margin-top: 30px;
-      "
-    >
-      <div style="margin-bottom: 15px">
-        <p style="margin: 5px 0; color: #555">
-          <strong>Ubicación:</strong> La Castellana, Caracas
-        </p>
-      </div>
-      <div style="border-top: 1px solid #ddd; padding-top: 15px">
-        <p style="margin: 0; color: #777; font-size: 14px">
-          &copy; Restaurante Herr Fritz <span id="year"></span> | Todos los
-          derechos reservados
-        </p>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__section">
+            <h3>Ubicación</h3>
+            <p>Av. Principal de La Castellana</p>
+            <p>Caracas, Venezuela</p>
+          </div>
+
+          <div class="footer__section">
+            <h3>Horario</h3>
+            <p>Lunes a Viernes: 12:00 pm - 10:00 pm</p>
+            <p>Sábados y Domingos: 12:00 pm - 11:00 pm</p>
+          </div>
+
+          <div class="footer__section">
+            <h3>Contacto</h3>
+            <p>Teléfono: +58 212 555-1234</p>
+            <p>Email: info@herrfritz.com</p>
+            <div class="footer__social">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <p>
+            &copy; Restaurante Herr Fritz <span id="year"></span> | Todos los
+            derechos reservados
+          </p>
+        </div>
       </div>
     </footer>
 
@@ -153,9 +160,5 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
   </body>
 </html>
